@@ -1,0 +1,9 @@
+.*\.tar\.gz
+^blib.*
+^\w+\.(html|txt|png|dot|pl|svg|old|bak|org)
+^Makefile\z
+^Makefile.(old|bak)\z
+^FastCalc.(o|c|bs)\z
+.*\.patch\z
+pm_to_blib
+^todos[\\\/]
