@@ -2,11 +2,11 @@
 name: Math-BigInt-FastCalc
 author: Tels
 abstract: Math::BigInt::Calc with some XS for more speed
-version: 0.11
+version: 0.12
 version_from: lib/Math/BigInt/FastCalc.pm
 license: perl
 distribution_type: module
-generated_by: Math-BigInt-FastCalc version 0.11
+generated_by: Math-BigInt-FastCalc version 0.12
 installdirs: perl
 requires:
   Math::BigInt: 1.79
