@@ -14,21 +14,23 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 d98b917de9d71c876783a6c94663cd3e226d4a40 CHANGES
+SHA1 4e26b53c4e851adb82f99468b1b380259a4822ff CHANGES
 SHA1 58d7a00ab2a9f5448a561d49b5a2077efa245ac7 CREDITS
-SHA1 2ebdc830d3ab736b281b442fde222a489061e04c FastCalc.xs
-SHA1 86c362488d406219c59eaebbc1191cbf23ea921a MANIFEST
-SHA1 53df425d2c2d99bd5f85713e9eb31a3a01f105cd META.yml
-SHA1 dfa4252feadfcb7fbd814a7c4e405294d4ee57b3 Makefile.PL
+SHA1 8126bd64b615c389a1cd92d86f6993e54dd2d27a FastCalc.xs
+SHA1 254873d0777fb81e6606114dfe3444e5bfc92765 MANIFEST
+SHA1 464003a0fb39ff40ba48a48393ac69365c8ef498 MANIFEST.SKIP
+SHA1 055cbaf1cc44c7b46e4237f5daf868270abff976 META.yml
+SHA1 ba7c41dcfad37d73fcead3d6fa8a6148ccf7e3cf Makefile.PL
 SHA1 a1e38089425d81c98d94604ac652fd3ef775cdee README
 SHA1 4a97b901ec3fd7edb989c8918ec0d82b8f7dfff7 TODO
-SHA1 6c05b9369b16bd5a8336da1ce28d36db14792a1a lib/Math/BigInt/FastCalc.pm
+SHA1 c4e621a15a5a29f694e1cb0291c07d93402a14e5 lib/Math/BigInt/FastCalc.pm
 SHA1 57a416650fede5f54aa295e5cd133022a0b9efdd t/bigfltpm.inc
 SHA1 4076f36c4d0989c5f3bfd208dd6e0c553ae35a3e t/bigfltpm.t
 SHA1 81f78404be3f660a61d68719de389d473888f640 t/bigintfc.t
 SHA1 f88c1aa03a27bd230a72574a53a55101686bf62b t/bigintpm.inc
 SHA1 afa175efb16aff6c897ebe96f6d31e166d4c0f20 t/bigintpm.t
 SHA1 f324311bde3f86401ea2708c42a6f13031a535a4 t/bootstrap.t
+SHA1 f9242a17d3107f7b4b40752a671a600d2ef77354 t/leak.t
 SHA1 7f10510e0218cfae2fbb58dabeea0ba966ede013 t/mbi_rand.t
 SHA1 8b454e3015212b33974be31c54a0ca745c59b4ba t/mbimbf.inc
 SHA1 ccc08f6373dba8db715fc1f2c18f16daacc902b4 t/mbimbf.t
@@ -37,11 +39,11 @@ SHA1 85872557f2e8ca0006d77f377bea14ad62a0cf6a t/pod_cov.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.2 (GNU/Linux)
 
-iQEVAwUBRcNKMXcLPEOTuEwVAQLOwAf+Pz1ui8VH9uYY/2+0EtjpwQ44AZ1gtpSY
-QHJ1MiJT6ovFO85TOXoNx7nOrnw+iDgLsQF2Ki/I+t2YRMmcGfbWlbgM+Gv7D6zA
-Z5+CPZ8TQlPqS9DRyhonqZMeKH7Zx+mpHCtKjoRA6DkheZiq+mYdrsDy6qE8dQtG
-b0m5y9bRqdHBBf8Zpx+IRvVU6JNXwrcZ4KQziuhjaHlnC3iwrn+aE+iT0DrCluAt
-Jku5295FgZk9svdrSE0bn8eCcbUYLmpQukCMhXaNeymFn3bhTnFGDokOAPP18WVw
-lpqhxkzdI/JaEuNRzc3ggpm6fBToDheqjh7LRK4X4Zni51MKhU20eA==
-=SWMT
+iQEVAwUBRempSXcLPEOTuEwVAQIKlAf9FhxEfGnHgjgj/9NZgsDqCv8HmkVes4BC
+AXwDJcSLqMCAqfvOUMU4ukYgij8OQdV+40/YAZSK//UvhLR+G0FuoZoOSHmbYiWa
+EXkZoWP81AzJ/MXxct28LtoqaihGWMoJi1v9IF+Gq06CVre45B/KoDyLNmfZ6vwM
+FFGL+svnVO3PTG95un7f0WtOxHSvlyycN0E0MEqLGOo9Q/gTr7CebdQ/vXVVXsEf
+skItI4LwPEIiNtccrpWYaZi6JYR1g+uBc45d5l4GyDK+ThuNo+sqizcYdP5XOHOq
+SuViKS/6LG4q3RU9oQqiNmJIj8FBUfsi0VpMYQoKFEOAa4rIFaTssA==
+=gaUD
 -----END PGP SIGNATURE-----
